# gph-math

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: config.h  gmath.h  matrix.cc  matrix.h  matrix.inl  misc.cc  misc.h  noise.cc  noise.h  quat.cc  quat.h  quat.inl  ray.cc  ray.h  swizzle.h  vector.cc  vector.h  vector.inl  vector2.inl  vector3.inl  vector4.inl
